# movie-api

movie-website/: db.sqlite3  pyproject.toml  requirements.txt
movie-website/movieWebsite/: settings.py  urls.py
movie-website/movies/: models.py  serializer.py  views.py
movie-website/movies/migrations/: 0001_initial.py  0002_auto_20210307_1858.py  0003_moviesdata_image.py  0004_auto_20210307_2017.py  0005_auto_20210307_2019.py  0006_moviesdata_image.py
